Fixed minor code errors and made adjustments